2017-05-20  Natalia Portillo  <claunia@claunia.com>

	* packages.config:
	* DiscImageChef.DiscImages.csproj: Updated dependencies.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* BLU.cs:
	* CHD.cs:
	* GDI.cs:
	* QED.cs:
	* VHD.cs:
	* VDI.cs:
	* DIM.cs:
	* NDIF.cs:
	* UDIF.cs:
	* VHDX.cs:
	* Nero.cs:
	* QCOW.cs:
	* DART.cs:
	* QCOW2.cs:
	* CPCDSK.cs:
	* VMware.cs:
	* CopyQM.cs:
	* CDRDAO.cs:
	* CDRWin.cs:
	* CloneCD.cs:
	* AppleNIB.cs:
	* TeleDisk.cs:
	* Apple2MG.cs:
	* Parallels.cs:
	* ImageInfo.cs:
	* DiskCopy42.cs:
	* Alcohol120.cs:
	* BlindWrite5.cs:
	* DiscJuggler.cs:
	* BlindWrite4.cs:
	* ZZZRawImage.cs:
	* ImagePlugin.cs:
	* AssemblyInfo.cs: Updated copyright string.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs: Bumped version to 3.3.99.0.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* packages.config:
	* README.txt:
	* LICENSE.txt:
	* ChangeLog.txt:
	* index.xml:
	* index.html:
	* DiscImageChef.DiscImages.csproj:
	* ns-Claunia.PropertyList.xml:
	* UID.xml:
	* UID.html:
	* NSSet.xml:
	* index.html:
	* NSData.xml:
	* NSDate.xml:
	* NSSet.html:
	* NSData.html:
	* NSArray.xml:
	* NSDate.html:
	* NSNumber.xml:
	* NSObject.xml:
	* NSString.xml:
	* NSArray.html:
	* NSObject.html:
	* NSNumber.html:
	* NSString.html:
	* NSDictionary.xml:
	* NSDictionary.html:
	* PropertyListParser.xml:
	* PropertyListParser.html:
	* XmlPropertyListParser.xml:
	* XmlPropertyListParser.html:
	* ASCIIPropertyListParser.xml:
	* BinaryPropertyListWriter.xml:
	* BinaryPropertyListParser.xml:
	* ASCIIPropertyListParser.html:
	* BinaryPropertyListWriter.html:
	* BinaryPropertyListParser.html:
	* PropertyListFormatException.xml:
	* PropertyListFormatException.html: Updated NuGet packages.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.DiscImages.csproj: Upped version to 3.3.99.0.
	  Do not use version from solution on library projects.

2016-10-17  Natalia Portillo  <claunia@claunia.com>

	* CHD.cs: Added PCMCIA support.
