@@ -1123,6 +1123,15 @@ namespace DiscImageChef.ImagePlugins
             if(fullToc != null)
                 ImageInfo.readableMediaTags.Add(MediaTagType.CD_FullTOC);
 
+			if(ImageInfo.mediaType == MediaType.XGD2)
+			{
+				// All XGD3 all have the same number of blocks
+				if(ImageInfo.sectors == 25063 || // Locked (or non compatible drive)
+				   ImageInfo.sectors == 4229664 || // Xtreme unlock
+				   ImageInfo.sectors == 4246304) // Wxripper unlock
+					ImageInfo.mediaType = MediaType.XGD3;
+			}
+
             DicConsole.VerboseWriteLine("BlindWrite image describes a disc of type {0}", ImageInfo.mediaType);
 
             return true;
